[gd_scene format=3 uid="uid://dcwuooc1citlw"]

[ext_resource type="Script" uid="uid://v53ud2spamha" path="res://Interface/day_transition.gd" id="1_plveu"]

[node name="DayTransition" type="CanvasLayer" unique_id=72735776]
process_mode = 3
layer = 100
script = ExtResource("1_plveu")

[node name="ColorRect" type="ColorRect" parent="." unique_id=742973919]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="." unique_id=1619546683]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="ConsequenceLabel" type="Label" parent="VBoxContainer" unique_id=885590987]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_color = Color(0.86014724, 0.2762922, 0, 1)
theme_override_font_sizes/font_size = 77
text = "game over"
horizontal_alignment = 1
uppercase = true

[node name="ReportLabel" type="RichTextLabel" parent="VBoxContainer" unique_id=1320273502]
unique_name_in_owner = true
layout_mode = 2
bbcode_enabled = true
fit_content = true

[node name="RestartButton" type="Button" parent="VBoxContainer" unique_id=1124791108]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 36
text = "Restart"

[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
